# test-ithappens-1308

./: .gitignore  .travis.yml  README.md
implementacao/: .classpath  .env.example  .env.travis  .project  .travis.yml  AdminModule.cpp  AdminModule.h  CMakeLists.txt  Common.cpp  Common.h  DataBase.cpp  DataBase.h  Dockerfile  InitialWindow.cpp  InitialWindow.h  Makefile  ManagerWindow.cpp  ManagerWindow.h  OrderModule.cpp  OrderModule.h  README.md  UserModule.cpp  UserModule.h  build.xml  docker-compose.yml  main.cpp  phpcs.xml  pom.xml
implementacao/Pulse/src/: Cliente.java  Estoque.java  Filial.java  FormaPagamento.java  GmPulse.java  ItensPedido.java  PedidoEstoque.java  Produto.java  Usuario.java
implementacao/app/: Cliente.php  Estoque.php  Filial.php  Item.php  Pagamento.php  Pedido.php  Produto.php  User.php
implementacao/database/factories/: ModelFactory.php
implementacao/database/migrations/: 2020_08_24_130209_create_users_table.php  2020_08_24_182452_create_produtos_table.php  2020_08_24_190349_create_filiais_table.php  2020_08_24_191843_create_clientes_table.php  2020_08_24_200136_create_pagamentos_table.php  2020_08_24_211736_create_estoques_table.php  2020_08_24_212105_create_pedidos_table.php  2020_08_24_212111_create_itens_table.php
implementacao/database/seeds/: DatabaseSeeder.php  (+2 more)
implementacao/negocio/: negocio.eml  negocio.userlibraries  pom.xml
implementacao/nginx/: default.conf
implementacao/routes/: web.php
implementacao/tests/: ClienteTest.php  EstoqueTest.php  FilialTest.php  PedidoTest.php  ProdutoTest.php  UsuarioTest.php
(+368 files in other folders)
